--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,8 @@ pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2022-08-19T09:47Z
+last_built: 2022-08-23T00:13Z
 urls:
-  reference: http://rubenfcasal.github.io/simres/reference
-  article: http://rubenfcasal.github.io/simres/articles
+  reference: https://rubenfcasal.github.io/simres/reference
+  article: https://rubenfcasal.github.io/simres/articles
 
