Double-exponential distribution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,14 @@ S3method(summary,rhtest)
 export(chisq.cont.test)
 export(conv.plot)
 export(cpu.time)
+export(ddexp)
 export(eval.curve)
 export(freq.test)
 export(mc.integral)
 export(mc.plot)
+export(pdexp)
+export(qdexp)
+export(rdexp)
 export(rephtest)
 export(rlcg)
 export(rng)
