--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(mc.integral)
 export(mc.plot)
 export(pdexp)
 export(qdexp)
+export(rcauchy.rou)
 export(rdexp)
 export(rephtest)
 export(rlcg)
