Added rpmf.xxx() and cdf.plot()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,rhtest)
 S3method(print,summaryrhtest)
 S3method(summary,rhtest)
+export(cdf.plot)
 export(chisq.cont.test)
 export(conv.plot)
 export(cpu.time)
@@ -18,10 +19,15 @@ export(rdexp)
 export(rephtest)
 export(rlcg)
 export(rng)
+export(rpmf)
+export(rpmf.alias)
+export(rpmf.table)
 export(rvng)
 export(set.rng)
 import(graphics)
 import(stats)
+importFrom(grDevices,dev.flush)
+importFrom(grDevices,dev.hold)
 importFrom(grDevices,dev.interactive)
 importFrom(grDevices,devAskNewPage)
 importFrom(utils,flush.console)
