--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: simres
 Type: Package
 Title: Simulation and resampling techniques
-Version: 0.1.2
-Date: 2022-08-30
+Version: 0.1.3
+Date: 2022-10-26
 Authors@R: person("Ruben", "Fernandez-Casal", , "rubenfcasal@gmail.com", 
     role = c("aut", "cre"), comment = c(ORCID = "0000-0002-5785-3739"))
 Maintainer: Ruben Fernandez-Casal <rubenfcasal@gmail.com>
@@ -12,7 +12,7 @@ Depends:
 Suggests:
     boot
 Description: Functions and datasets used in the books: 'Simulacion Estadistica'
-    <https://rubenfcasal.github.io/simbook> and 'Tecnicas de Remuestreo'
+    <https://rubenfcasal.github.io/simbook2> and 'Tecnicas de Remuestreo'
     <https://rubenfcasal.github.io/book_remuestreo>.
 License: GPL (>= 2)
 URL: https://github.com/rubenfcasal/simres
