--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Depends:
     graphics
 Suggests:
     boot
-Description: Functions and datasets used in the books: 'Simulacion Estadistica'
-    <https://rubenfcasal.github.io/simbook2> and 'Tecnicas de Remuestreo'
+Description: Functions and datasets used in the books: 'Técnicas de Simulacion y Remuestreo'
+    <https://rubenfcasal.github.io/simbook> and 'Tecnicas de Remuestreo'
     <https://rubenfcasal.github.io/book_remuestreo>.
 License: GPL (>= 2)
 URL: https://github.com/rubenfcasal/simres
@@ -20,4 +20,4 @@ BugReports: https://github.com/rubenfcasal/simres/issues
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
